mockoon.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockoon
  namespace: wso2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockoon
  template:
    metadata:
      labels:
        app: mockoon
    spec:
      containers:
        - name: mockoon
          image: mockoon/cli:latest
          args: ["-d", "/data/data.json"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: "/data"
      volumes:
        - name: data
          configMap:
            name: mockoon-data
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mockoon
  name: mockoon
  namespace: wso2
spec:
  type: ClusterIP
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: mockoon
  ports:
    # ports that this service should serve on
    - name: http
      port: 80
      targetPort: 3000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-mockoon
  namespace: wso2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: go-mockoon.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mockoon
                port:
                  number: 80
