redis_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rec-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
      - db.wso2.com
    secretName: redis-tls-secret
  rules:
  - host: db.wso2.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rediscounterdb
            port:
              name: redis
